{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 239,
  "lineage": "0fa8f877-ff88-19c9-7a30-3049bdc2e438",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047fc6f17b21a041c",
            "association_id": "eipassoc-069d976ffe89cef01",
            "domain": "vpc",
            "id": "eipalloc-047fc6f17b21a041c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00040e54ec179dbc6",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-54-83-118-78.compute-1.amazonaws.com",
            "public_ip": "54.83.118.78",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001c64983cf994c77",
            "association_id": "eipassoc-045054e2980e2cf7a",
            "domain": "vpc",
            "id": "eipalloc-001c64983cf994c77",
            "network_border_group": "us-east-1",
            "network_interface": "eni-059252b44d1fe8030",
            "private_dns": "ip-10-0-2-240.ec2.internal",
            "private_ip": "10.0.2.240",
            "public_dns": "ec2-23-20-49-205.compute-1.amazonaws.com",
            "public_ip": "23.20.49.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:internet-gateway/igw-0a96286b6406bae42",
            "id": "igw-0a96286b6406bae42",
            "owner_id": "510940142514",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047fc6f17b21a041c",
            "connectivity_type": "public",
            "id": "nat-07f237209a24f8961",
            "network_interface_id": "eni-00040e54ec179dbc6",
            "private_ip": "10.0.1.9",
            "public_ip": "54.83.118.78",
            "subnet_id": "subnet-0d1e03d4632528a8a",
            "tags": {
              "Name": "NAT1"
            },
            "tags_all": {
              "Name": "NAT1"
            }
          },
          "dependencies": [
            "aws_subnet.publicsubnet1",
            "aws_vpc.main",
            "aws_eip.eip1",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001c64983cf994c77",
            "connectivity_type": "public",
            "id": "nat-089c17f73f240cae1",
            "network_interface_id": "eni-059252b44d1fe8030",
            "private_ip": "10.0.2.240",
            "public_ip": "23.20.49.205",
            "subnet_id": "subnet-0de7f3a563223dbbe",
            "tags": {
              "Name": "NAT2"
            },
            "tags_all": {
              "Name": "NAT2"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:route-table/rtb-05fc006b215358b48",
            "id": "rtb-05fc006b215358b48",
            "owner_id": "510940142514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07f237209a24f8961",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:route-table/rtb-04a7bfca9981eaa6b",
            "id": "rtb-04a7bfca9981eaa6b",
            "owner_id": "510940142514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-089c17f73f240cae1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:route-table/rtb-013fdaff529d9b3ad",
            "id": "rtb-013fdaff529d9b3ad",
            "owner_id": "510940142514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a96286b6406bae42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c057e093999bb61",
            "route_table_id": "rtb-05fc006b215358b48",
            "subnet_id": "subnet-0dc7562a9c55f01d9"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat1",
            "aws_route_table.private1",
            "aws_subnet.privatesubnet1",
            "aws_subnet.publicsubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050ed7772123cbc84",
            "route_table_id": "rtb-04a7bfca9981eaa6b",
            "subnet_id": "subnet-04d61de35e9804a5c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat2",
            "aws_route_table.private2",
            "aws_subnet.privatesubnet2",
            "aws_subnet.publicsubnet2",
            "aws_vpc.main",
            "aws_eip.eip2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e91802a8b1c43b98",
            "route_table_id": "rtb-013fdaff529d9b3ad",
            "subnet_id": "subnet-0d1e03d4632528a8a"
          },
          "dependencies": [
            "aws_subnet.publicsubnet1",
            "aws_vpc.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e91802a8b1c43b98",
            "route_table_id": "rtb-013fdaff529d9b3ad",
            "subnet_id": "subnet-0d1e03d4632528a8a"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.publicsubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:subnet/subnet-0dc7562a9c55f01d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc7562a9c55f01d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510940142514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:subnet/subnet-04d61de35e9804a5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d61de35e9804a5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510940142514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:subnet/subnet-0d1e03d4632528a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e03d4632528a8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510940142514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:subnet/subnet-0de7f3a563223dbbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de7f3a563223dbbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510940142514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.1o/role/elb": "1",
              "kubernetes.io/cluster/eks": "shared"
            },
            "vpc_id": "vpc-01fa8c08810f93151"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510940142514:vpc/vpc-01fa8c08810f93151",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0174491d5369d2931",
            "default_route_table_id": "rtb-0edc86164833d45dd",
            "default_security_group_id": "sg-0e2d95b8336bff307",
            "dhcp_options_id": "dopt-0196bf398926816c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01fa8c08810f93151",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edc86164833d45dd",
            "owner_id": "510940142514",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}